[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
polars = { version = "0.37.0", features = ["json", "lazy"] }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
sqlparser = "0.43.1"
tokio = { version = "1.36.0", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
